# server/src/swagger/index.ts
@@ -7,6 +7,7 @@ const doc = {
     description: 'Api em Node desenvolvida no evento nlw, api REST em arquitetura MVC',
   },
   host: 'localhost:3000',
+  basePath: "/",
   schemes: ['http'],
   consumes: ['application/json'],
   produces: ['application/json'],
@@ -20,6 +21,17 @@ const doc = {
       "description": "Endpoints de Anúncios"
     }
   ],
+  definitions: {
+    addAds: {
+      name: "nick name example",
+      yearsPlaying: 1,
+      discord: "discord#id",
+      weekDays: "0, 2, 5, 6",
+      hourStart: "17:00",
+      hourEnd: "23:59",
+      useVoiceChannel: true
+    }
+  }
 };
 
 const outputFile = './src/swagger/swagger-output.json';
